user service and user module
